cmake_minimum_required(VERSION 3.2)
project(std)

include(CTest)
enable_testing()

## コンセプトライブラリ

## コルーチンライブラリ

## ユーティリティライブラリ

## 動的メモリ管理

## 数値の限界

## エラー処理

## 文字列ライブラリ

## コンテナライブラリ

## イテレータライブラリ

## 範囲ライブラリ

## アルゴリズムライブラリ

## 数値演算ライブラリ

## 入出力ライブラリ

## ローカライゼーションライブラリ

## 正規表現ライブラリ

## アトミック操作ライブラリ

## スレッドサポートライブラリ
# <thread> (C++11以上)	std::thread クラスとサポート関数
add_subdirectory(thread)
